@startuml
abstract class Product{
 #String name
 #double price
 #int [] amount
 + getter and setter()
}
abstract class Food{
 - double grams
 + double getGrams()
 +  void setGrams()
}
interface Salable
class Accesories{
 -int boxes
 +boolean isAvalaible()
 +void upPrice ()
}
class Drinks{
 -boolean alcohol
 -double miñimeters
 + getter and setter ()
}
class Gluten{
 +boolean isAvalaible()
 +void upPrice ()
}
class GlutenFree{
 - Salable salable
 +boolean isAvalaible()
 +void upPrice ()
}
class Main
class Management{
 - Arraylist <Product>
 - Arraylist <Money>
 + int [] getChange()
 + int verufyMachineChange()
 + void menu()
}
class Money{
 -float value
 -int [] values
+ getter and setter ()
}
Product <|-- Accesories
Product <|-- Food
Product <|-- Drinks
Food <|-- Gluten
Food <|-- GlutenFree
@enduml
